2011-05-20 Pierre Wieser <pwieser@trychlos.org>

	* nautilus-actions.doap: Update download page and mailing list infos.

	* configure.ac: Post release version bump.

2011-05-19 Pierre Wieser <pwieser@trychlos.org>

	* docs/nact/figures: Update screenshots.

	* docs/nact/C/nact-properties.xml: New file.

2011-05-18 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-selected-info.c: Extract filename for a GFile location.

	* src/utils/na-gconf2keys.sh: Requires ksh.

	* src/core/na-settings.c: Create the configuration directory if
	doesn't exist yet.

2011-03-14 Pierre Wieser <pwieser@trychlos.org>

	* src/test/Makefile.am: Do not build test programs in release mode.

	* docs/nact/C/nact-sorting.xml:
	* docs/nact/C/nautilus-actions-config-tool.xml: Fix some typos.

	* docs/nact/C/articleinfo.xml:
	Convert to *nix-like file.
	Update manual copyright.

	* docs/nact/C/figures/nact-desktop-environment-frame.png:
	* docs/nact/C/figures/nact-execution-environment-frame.png:
	* docs/nact/C/figures/nact-preferences-export.png:
	* docs/nact/C/figures/nact-preferences-import.png:
	* docs/nact/C/figures/nact-preferences-io-providers.png:
	* docs/nact/C/figures/nact-preferences-runtime.png:
	* docs/nact/C/figures/nact-preferences-schemes.png:
	* docs/nact/C/figures/nact-preferences-ui.png:
	* docs/nact/C/figures/nact-schemes-tab.png:
	* docs/nact/C/figures/nact-target-location.png:
	* docs/nact/C/figures/nact-working-directory-frame.png:
	* docs/nact/C/figures/nact-export-done.png:
	* docs/nact/C/figures/nact-export-format.png:
	* docs/nact/C/figures/nact-export-home.png:
	* docs/nact/C/figures/nact-export-items.png:
	* docs/nact/C/figures/nact-export-summary.png:
	* docs/nact/C/figures/nact-export-target.png:
	* docs/nact/C/figures/nact-import-done.png:
	* docs/nact/C/figures/nact-import-files.png:
	* docs/nact/C/figures/nact-import-home.png:
	* docs/nact/C/figures/nact-import-mode.png:
	* docs/nact/C/figures/nact-import-resultat.png: